--- a/doublekit-workbench-starter/src/main/resources/application-dev.properties
+++ b/doublekit-workbench-starter/src/main/resources/application-dev.properties
@@ -30,26 +30,32 @@ jdbc.password=darth2020
 
 #dfs server config
 dfs.mode=server
-dfs.port=3000
+dfs.port=3005
 dfs.path=${DATA_HOME}/apps/${app.name}/data/dfs
 #dfs client config
-dfs.url=server://127.0.0.1:3000
+dfs.url=server://127.0.0.1:3005
 
 #dcs config
 #dcs server config
 dcs.mode=server
-dcs.port=4000
+dcs.port=4005
 dcs.path=${DATA_HOME}/apps/${app.name}/data/dcs
 #dcs client config
-dcs.url=server://127.0.0.1:4000
+dcs.url=server://127.0.0.1:4005
 
 #dss config
 #dss server config
 dss.mode=server
-dss.port=5000
+dss.port=5005
 dss.path=${DATA_HOME}/apps/${app.name}/data/dss
 #dss client config
-dss.url=server://127.0.0.1:5000
+dss.url=server://127.0.0.1:5005
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
+
+#auth config
+auth.config.type=file
+auth.type=acc
+acc.url=http://192.168.2.2:8000
+acc.server.url=http://192.168.2.2:8000
