--- a/doublekit-workbench-starter/src/main/resources/application-dev.properties
+++ b/doublekit-workbench-starter/src/main/resources/application-dev.properties
@@ -55,7 +55,7 @@ dcs.url=server://127.0.0.1:38001
 plugin.path=${APP_HOME}/plugin
 
 #auth config
-auth.config.type=file
-auth.type=acc
-acc.url=http://192.168.2.2:8000
-acc.server.url=http://192.168.2.2:8000
+#auth.config.type=file
+#auth.type=acc
+#acc.url=http://192.168.2.2:8000
+#acc.server.url=http://192.168.2.2:8000
