--- a/doublekit-console-starter/src/main/resources/application-local.properties
+++ b/doublekit-console-starter/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 #application config
-app.name=doublekit-workbench
+app.name=doublekit-console
 DATA_HOME=${user.home}
 spring.profiles.active=local
 
@@ -11,20 +11,20 @@ tomcat.port=8001
 #dal config for hsql server
 hsql.enabled=false
 hsql.path=${DATA_HOME}/apps/${app.name}/data/hsql
-hsql.name=darth_workbench
+hsql.name=darth_console
 hsql.port=2012
 hsql.username=root
 hsql.password=123456
 
 #dal config for mysql jdbc
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://114.215.180.181:3306/darth_workbench?characterEncoding=utf8&useSSL=false
+jdbc.url=jdbc:mysql://114.215.180.181:3306/darth_console?characterEncoding=utf8&useSSL=false
 jdbc.username=root
 jdbc.password=darth2020
 
 #dal config for hsql jdbc
 #jdbc.driverClassName=org.hsqldb.jdbcDriver
-#jdbc.url=jdbc:hsqldb:hsql://localhost:2012/darth_workbench;shutdown=false
+#jdbc.url=jdbc:hsqldb:hsql://localhost:2012/darth_console;shutdown=false
 #jdbc.username=root
 #jdbc.password=123456
 
