--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <groupId>com.doublekit</groupId>
-    <artifactId>doublekit-workbench</artifactId>
+    <artifactId>doublekit-console</artifactId>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <version>1.0.0-SNAPSHOT</version>
