--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -6,10 +6,10 @@
 
     <parent>
         <groupId>com.doublekit</groupId>
-        <artifactId>doublekit-console</artifactId>
+        <artifactId>doublekit-oms</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>doublekit-console-server</artifactId>
+    <artifactId>doublekit-oms-server</artifactId>
     <name>${project.artifactId}</name>
     <version>1.0.0-SNAPSHOT</version>
 
