--- a/doublekit-oms-starter/pom.xml
+++ b/doublekit-oms-starter/pom.xml
@@ -6,17 +6,17 @@
 
     <parent>
         <groupId>com.doublekit</groupId>
-        <artifactId>doublekit-console</artifactId>
+        <artifactId>doublekit-oms</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>doublekit-console-starter</artifactId>
+    <artifactId>doublekit-oms-starter</artifactId>
     <name>${project.artifactId}</name>
     <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-console-server</artifactId>
+            <artifactId>doublekit-oms-server</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
