--- a/doublekit-oms-starter/src/main/resources/application-local.properties
+++ b/doublekit-oms-starter/src/main/resources/application-local.properties
@@ -1,30 +1,33 @@
 #application config
-app.name=doublekit-console
+app.name=doublekit-oms
 DATA_HOME=${user.home}
 spring.profiles.active=local
 
 #web config
 tomcat.port=8001
 
-#dal config
+#rpc config
+rpc.client.address=127.0.0.1:16800
+rpc.client.reference.scan.package=com.doublekit
 
+#dal config
 #dal config for hsql server
 hsql.enabled=false
 hsql.path=${DATA_HOME}/apps/${app.name}/data/hsql
-hsql.name=darth_console
+hsql.name=darth_oms
 hsql.port=2012
 hsql.username=root
 hsql.password=123456
 
 #dal config for mysql jdbc
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://114.215.180.181:3306/darth_console?characterEncoding=utf8&useSSL=false
+jdbc.url=jdbc:mysql://114.215.180.181:3306/darth_oms?characterEncoding=utf8&useSSL=false
 jdbc.username=root
 jdbc.password=darth2020
 
 #dal config for hsql jdbc
 #jdbc.driverClassName=org.hsqldb.jdbcDriver
-#jdbc.url=jdbc:hsqldb:hsql://localhost:2012/darth_console;shutdown=false
+#jdbc.url=jdbc:hsqldb:hsql://localhost:2012/darth_oms;shutdown=false
 #jdbc.username=root
 #jdbc.password=123456
 
@@ -53,3 +56,6 @@ dcs.url=server://127.0.0.1:38001
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
+
+#datafly config
+datafly.scan.package=com.doublekit.user,com.doublekit.privilege,com.doublekit.toolkit
