--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <modules>
+        <module>doublekit-oms-api</module>
         <module>doublekit-oms-server</module>
         <module>doublekit-oms-starter</module>
     </modules>
