--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -21,6 +21,11 @@
         <!--doublekit-->
         <dependency>
             <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-rpc-spring-boot-starter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.doublekit</groupId>
             <artifactId>doublekit-gateway-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -48,27 +53,27 @@
         <!--ssc共享服务接口依赖-->
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ssc-member-api</artifactId>
+            <artifactId>doublekit-ssc-member-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ssc-iam-api</artifactId>
+            <artifactId>doublekit-ssc-iam-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ssc-tenant-api</artifactId>
+            <artifactId>doublekit-ssc-tenant-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ssc-product-api</artifactId>
+            <artifactId>doublekit-ssc-product-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ssc-trade-api</artifactId>
+            <artifactId>doublekit-ssc-trade-server</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
