--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,25 @@
         <module>doublekit-oms-server</module>
         <module>doublekit-oms-starter</module>
     </modules>
+    <repositories>
+        <repository>
+            <id>doublekit-maven</id>
+            <name>doublekit maven</name>
+            <url>http://192.168.2.102:8081/repository/maven-public/</url>
+        </repository>
+    </repositories>
 
+    <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
+            <name>nexus releases</name>
+            <url>http://192.168.2.102:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <name>nexus snapshots</name>
+            <url>http://192.168.2.102:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
 
