--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -21,7 +21,7 @@ hsql.password=123456
 
 #dal config for mysql jdbc
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://114.215.180.181:3306/darth_oms?characterEncoding=utf8&useSSL=false
+jdbc.url=jdbc:mysql://192.168.2.91:3306/darth_boss?characterEncoding=utf8&useSSL=false
 jdbc.username=root
 jdbc.password=darth2020
 
@@ -36,7 +36,7 @@ dfs.mode=server
 dfs.port=18001
 dfs.path=${DATA_HOME}/apps/${app.name}/data/dfs
 #dfs client config
-dfs.url=server://127.0.0.1:18001
+dfs.url=server://127.0.0.1:18001/doublekit-oms
 
 #dss config
 #dss server config
@@ -44,7 +44,7 @@ dss.mode=server
 dss.port=28001
 dss.path=${DATA_HOME}/apps/${app.name}/data/dss
 #dss client config
-dss.url=server://127.0.0.1:28001
+dss.url=server://127.0.0.1:28001/doublekit-oms
 
 #dcs config
 #dcs server config
@@ -52,10 +52,13 @@ dcs.mode=server
 dcs.port=38001
 dcs.path=${DATA_HOME}/apps/${app.name}/data/dcs
 #dcs client config
-dcs.url=server://127.0.0.1:38001
+dcs.url=server://127.0.0.1:38001/doublekit-oms
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
 
 #datafly config
 datafly.scan.package=com.doublekit.user,com.doublekit.privilege,com.doublekit.toolkit
+
+#licences config
+licences.path=${APP_HOME}/src/main/resources/licences
