--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,21 @@
         <module>doublekit-oms-server</module>
         <module>doublekit-oms-starter</module>
     </modules>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.doublekit</groupId>
+                <artifactId>doublekit-dfs-store-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.doublekit</groupId>
+                <artifactId>doublekit-dfs-spring-boot-starter</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <repositories>
         <repository>
             <id>doublekit-maven</id>
