--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>doublekit-ocs-licence-server</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <!--其他引入-->
+        <dependency>
+            <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-oms-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
