--- a/doublekit-oms-starter/src/main/resources/application-local.properties
+++ b/doublekit-oms-starter/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 #application config
 app.name=doublekit-oms
-DATA_HOME=${user.home}
+DATA_HOME=${user.home}/doublekit/${app.name}
 spring.profiles.active=local
 
 #web config
@@ -13,7 +13,7 @@ rpc.client.reference.scan.package=com.doublekit
 #dal config
 #dal config for hsql server
 hsql.enabled=false
-hsql.path=${DATA_HOME}/apps/${app.name}/data/hsql
+hsql.path=${DATA_HOME}/data/hsql
 hsql.name=darth_oms
 hsql.port=2012
 hsql.username=root
@@ -34,25 +34,25 @@ jdbc.password=darth2020
 #dfs server config
 dfs.mode=server
 dfs.port=18001
-dfs.path=${DATA_HOME}/apps/${app.name}/data/dfs
+dfs.path=${DATA_HOME}/data/dfs
 #dfs client config
-dfs.url=server://127.0.0.1:18001/doublekit-oms
+dfs.url=server://127.0.0.1:18001/default
 
 #dss config
 #dss server config
 dss.mode=server
 dss.port=28001
-dss.path=${DATA_HOME}/apps/${app.name}/data/dss
+dss.path=${DATA_HOME}/data/dss
 #dss client config
-dss.url=server://127.0.0.1:28001/doublekit-oms
+dss.url=server://127.0.0.1:28001/default
 
 #dcs config
 #dcs server config
 dcs.mode=server
 dcs.port=38001
-dcs.path=${DATA_HOME}/apps/${app.name}/data/dcs
+dcs.path=${DATA_HOME}/data/dcs
 #dcs client config
-dcs.url=server://127.0.0.1:38001/doublekit-oms
+dcs.url=server://127.0.0.1:38001/default
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
