--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -61,4 +61,4 @@ plugin.path=${APP_HOME}/plugin
 datafly.scan.package=com.doublekit.user,com.doublekit.privilege,com.doublekit.toolkit
 
 #licences config
-licences.path=${APP_HOME}/src/main/resources/licences
+licences.path=${DATA_HOME}/data/dfs/default
