refactor dfs/dcs/dss

--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -1,14 +1,10 @@
 #application config
 app.name=doublekit-oms
-DATA_HOME=/usr
+DATA_HOME=${user.home}/doublekit/${app.name}
 spring.profiles.active=dev
 
 #web config
 tomcat.port=8001
-
-#rpc config
-rpc.client.address=127.0.0.1:16800
-rpc.client.reference.scan.package=com.doublekit
 
 #dal config
 #dal config for hsql server
@@ -36,15 +32,7 @@ dfs.mode=server
 dfs.port=18001
 dfs.path=${DATA_HOME}/data/dfs
 #dfs client config
-dfs.url=server://127.0.0.1:18001/doublekit-oms
-
-#dss config
-#dss server config
-dss.mode=server
-dss.port=28001
-dss.path=${DATA_HOME}/data/dss
-#dss client config
-dss.url=server://127.0.0.1:28001/doublekit-oms
+dfs.url=server://127.0.0.1:18001/default
 
 #dcs config
 #dcs server config
@@ -52,7 +40,18 @@ dcs.mode=server
 dcs.port=38001
 dcs.path=${DATA_HOME}/data/dcs
 #dcs client config
-dcs.url=server://127.0.0.1:38001/doublekit-oms
+dcs.url=server://127.0.0.1:38001/default
+
+#dss config
+#dss server config
+dss.mode=server
+dss.port=28001
+dss.path=${DATA_HOME}/data/dss
+#dss client config
+dss.url=server://127.0.0.1:28001/default
+
+#rpc config
+rpc.client.address=127.0.0.1:16800
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
