--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
         <dependencies>
             <dependency>
                 <groupId>com.doublekit</groupId>
-                <artifactId>doublekit-dfs-store-api</artifactId>
-                <version>${project.version}</version>
+                <artifactId>doublekit-dfs-api</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.doublekit</groupId>
