--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -78,6 +78,11 @@
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-ocs-doc-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.doublekit</groupId>
             <artifactId>doublekit-dfs-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
