--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>doublekit-dfs-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-ocs-sns-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!--ocs依赖-->
         <dependency>
             <groupId>com.doublekit</groupId>
