--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -50,8 +50,8 @@ dss.path=${DATA_HOME}/data/dss
 #dss client config
 dss.url=server://127.0.0.1:28001/default
 
-#rpc config
-rpc.client.address=127.0.0.1:16800
+#integration config
+wiki.service.address=127.0.0.1:16800
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
