--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -17,7 +17,7 @@ hsql.password=123456
 
 #dal config for mysql jdbc
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.2.91:3306/darth_boss?characterEncoding=utf8&useSSL=false
+jdbc.url=jdbc:mysql://172.10.1.10:3306/darth_boss?characterEncoding=utf8&useSSL=false
 jdbc.username=root
 jdbc.password=darth2020
 
@@ -61,3 +61,5 @@ datafly.scan.package=com.doublekit.user,com.doublekit.privilege,com.doublekit.to
 
 #licences config
 licences.path=${DATA_HOME}/data/dfs/default
+
+db.path=172.10.1.10:3306
