环境路径修改  新建prd环境

--- a/doublekit-oms-starter/src/main/resources/application-test.properties
+++ b/doublekit-oms-starter/src/main/resources/application-test.properties
@@ -60,3 +60,5 @@ datafly.scan.package=com.doublekit.user,com.doublekit.privilege,com.doublekit.to
 
 #licences config
 licences.path=${DATA_HOME}/data/dfs/default
+
+db.path=101.132.162.74:3306
