--- a/doublekit-oms-starter/src/main/resources/application-prd.properties
+++ b/doublekit-oms-starter/src/main/resources/application-prd.properties
@@ -1,7 +1,7 @@
 #application config
 app.name=doublekit-oms
-DATA_HOME=${user.home}/doublekit/${app.name}
-spring.profiles.active=dev
+DATA_HOME=/root/doublekit/${app.name}
+spring.profiles.active=test
 
 #web config
 tomcat.port=8081
@@ -17,7 +17,7 @@ hsql.password=123456
 
 #dal config for mysql jdbc
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://172.10.1.10:3306/darth_boss?characterEncoding=utf8&useSSL=false
+jdbc.url=jdbc:mysql://101.132.162.74:3306/darth_boss?characterEncoding=utf8&useSSL=false
 jdbc.username=root
 jdbc.password=darth2020
 
@@ -32,7 +32,7 @@ dfs.mode=server
 dfs.port=5001
 dfs.path=${DATA_HOME}/data/dfs
 #dfs client config
-dfs.url=server://127.0.0.1:5001/default
+dfs.url=server://127.0.0.1:5001/doublekit-oms
 
 #dcs config
 #dcs server config
@@ -40,7 +40,7 @@ dcs.mode=server
 dcs.port=6001
 dcs.path=${DATA_HOME}/data/dcs
 #dcs client config
-dcs.url=server://127.0.0.1:6001/default
+dcs.url=server://127.0.0.1:6001/doublekit-oms
 
 #dss config
 #dss server config
@@ -48,10 +48,9 @@ dss.mode=server
 dss.port=7001
 dss.path=${DATA_HOME}/data/dss
 #dss client config
-dss.url=server://127.0.0.1:7001/default
+dss.url=server://127.0.0.1:7001/doublekit-oms
 
-#integration config
-wiki.service.address=127.0.0.1:8002
+#rpc config
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
@@ -62,4 +61,4 @@ datafly.scan.package=com.doublekit.user,com.doublekit.privilege,com.doublekit.to
 #licences config
 licences.path=${DATA_HOME}/data/dfs/default
 
-db.path=127.0.0.1:3306
+db.path=139.196.76.221:3306
