--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -63,3 +63,5 @@ datafly.scan.package=com.doublekit.user,com.doublekit.privilege,com.doublekit.to
 licences.path=${DATA_HOME}/data/dfs/default
 
 db.path=127.0.0.1:3306
+
+app.path=${APP_HOME}
