--- a/doublekit-oms-starter/src/main/resources/application-test.properties
+++ b/doublekit-oms-starter/src/main/resources/application-test.properties
@@ -62,3 +62,5 @@ datafly.scan.package=com.doublekit.user,com.doublekit.privilege,com.doublekit.to
 licences.path=${DATA_HOME}/data/dfs/default
 
 db.path=101.132.162.74:3306
+
+app.path=${APP_HOME}
