--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>doublekit-ocs-subscribe-server</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-ocs-ssm-server</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
         <!--其他引入-->
         <dependency>
             <groupId>com.doublekit</groupId>
