refactor X及删除无用配置

--- a/doublekit-oms-starter/src/main/resources/application-prd.properties
+++ b/doublekit-oms-starter/src/main/resources/application-prd.properties
@@ -1,31 +1,19 @@
 #application config
 app.name=doublekit-oms
-DATA_HOME=/root/doublekit/${app.name}
 spring.profiles.active=test
 
 #web config
 tomcat.port=8081
 
 #dal config
-#dal config for hsql server
-hsql.enabled=false
-hsql.path=${DATA_HOME}/data/hsql
-hsql.name=darth_oms
-hsql.port=2012
-hsql.username=root
-hsql.password=123456
 
 #dal config for mysql jdbc
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://101.132.162.74:3306/darth_boss?characterEncoding=utf8&useSSL=false
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://101.132.162.74:3306/darth_boss?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 jdbc.username=root
 jdbc.password=darth2020
 
-#dal config for hsql jdbc
-#jdbc.driverClassName=org.hsqldb.jdbcDriver
-#jdbc.url=jdbc:hsqldb:hsql://localhost:2012/darth_oms;shutdown=false
-#jdbc.username=root
-#jdbc.password=123456
+DATA_HOME=/root/doublekit/${app.name}
 
 #dfs server config
 dfs.mode=server
