--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -31,58 +31,58 @@
         <!--fcc基础组件依赖-->
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-pcs-user-spring-boot-starter</artifactId>
+            <artifactId>doublekit-user-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-pcs-privilege-spring-boot-starter</artifactId>
+            <artifactId>doublekit-privilege-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-plat-message-spring-boot-starter</artifactId>
+            <artifactId>doublekit-message-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-pcs-toolkit-spring-boot-starter</artifactId>
+            <artifactId>doublekit-toolkit-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--ssc共享服务接口依赖-->
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ocs-member-server</artifactId>
+            <artifactId>doublekit-member-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ocs-tenant-server</artifactId>
+            <artifactId>doublekit-tenant-server</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ocs-iam-server</artifactId>
+            <artifactId>doublekit-iam-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ocs-tenant-server</artifactId>
+            <artifactId>doublekit-tenant-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ocs-product-server</artifactId>
+            <artifactId>doublekit-product-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ocs-subscribe-server</artifactId>
+            <artifactId>doublekit-subscribe-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ocs-doc-server</artifactId>
+            <artifactId>doublekit-doc-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -92,18 +92,18 @@
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ocs-sns-server</artifactId>
+            <artifactId>doublekit-sns-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--ocs依赖-->
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ocs-subscribe-server</artifactId>
+            <artifactId>doublekit-subscribe-server</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ocs-ssm-server</artifactId>
+            <artifactId>doublekit-ssm-server</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <!--其他引入-->
