--- a/doublekit-oms-starter/src/main/resources/application-prd.properties
+++ b/doublekit-oms-starter/src/main/resources/application-prd.properties
@@ -3,7 +3,7 @@ app.name=doublekit-oms
 spring.profiles.active=test
 
 #web config
-tomcat.port=8081
+server.port=8081
 
 #dal config
 
@@ -16,27 +16,27 @@ jdbc.password=darth2020
 DATA_HOME=/root/doublekit/${app.name}
 
 #dfs server config
-dfs.mode=server
-dfs.port=5001
-dfs.path=${DATA_HOME}/data/dfs
+dfs.server.mode=server
+dfs.server.port=5001
+dfs.server.datapath=${DATA_HOME}/data/dfs
 #dfs client config
-dfs.url=server://127.0.0.1:5001/doublekit-oms
+dfs.client.url=server://127.0.0.1:5001/doublekit-oms
 
 #dcs config
 #dcs server config
-dcs.mode=server
-dcs.port=6001
-dcs.path=${DATA_HOME}/data/dcs
+dcs.server.mode=server
+dcs.server.port=6001
+dcs.server.datapath=${DATA_HOME}/data/dcs
 #dcs client config
-dcs.url=server://127.0.0.1:6001/doublekit-oms
+dcs.client.url=server://127.0.0.1:6001/doublekit-oms
 
 #dss config
 #dss server config
-dss.mode=server
-dss.port=7001
-dss.path=${DATA_HOME}/data/dss
+dss.server.mode=server
+dss.server.port=7001
+dss.server.datapath=${DATA_HOME}/data/dss
 #dss client config
-dss.url=server://127.0.0.1:7001/doublekit-oms
+dss.client.url=server://127.0.0.1:7001/doublekit-oms
 
 #rpc config
 
