--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -39,7 +39,7 @@ dss.server.datapath=${DATA_HOME}/data/dss
 dss.client.url=server://127.0.0.1:7001/default
 
 #integration config
-wiki.service.address=127.0.0.1:8002
+wiki.address=127.0.0.1:8002
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
