--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -16,27 +16,27 @@ jdbc.password=darth2020
 DATA_HOME=${user.home}/doublekit/${app.name}
 
 #dfs server config
-dfs.server.mode=server
+dfs.server.mode=standalone
 dfs.server.port=5001
 dfs.server.datapath=${DATA_HOME}/data/dfs
 #dfs client config
-dfs.client.url=server://127.0.0.1:5001/default
+dfs.client.url=standalone://127.0.0.1:5001/default
 
 #dcs config
 #dcs server config
-dcs.server.mode=server
+dcs.server.mode=standalone
 dcs.server.port=6001
 dcs.server.datapath=${DATA_HOME}/data/dcs
 #dcs client config
-dcs.client.url=server://127.0.0.1:6001/default
+dcs.client.url=standalone://127.0.0.1:6001/default
 
 #dss config
 #dss server config
-dss.server.mode=server
+dss.server.mode=standalone
 dss.server.port=7001
 dss.server.datapath=${DATA_HOME}/data/dss
 #dss client config
-dss.client.url=server://127.0.0.1:7001/default
+dss.client.url=standalone://127.0.0.1:7001/default
 
 #integration config
 wiki.address=127.0.0.1:8002
