--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -17,32 +17,31 @@ DATA_HOME=${user.home}/doublekit/${app.name}
 
 #dfs server config
 dfs.server.mode=standalone
-dfs.server.port=5001
+dfs.server.port=5002
 dfs.server.datapath=${DATA_HOME}/data/dfs
 #dfs client config
-dfs.client.url=standalone://127.0.0.1:5001/default
+dfs.client.url=standalone://127.0.0.1:5002/default
 
 #dcs config
 #dcs server config
 dcs.server.mode=standalone
-dcs.server.port=6001
+dcs.server.port=6002
 dcs.server.datapath=${DATA_HOME}/data/dcs
 #dcs client config
-dcs.client.url=standalone://127.0.0.1:6001/default
+dcs.client.url=standalone://127.0.0.1:6002/default
 
 #dss config
 #dss server config
 dss.server.mode=standalone
-dss.server.port=7001
+dss.server.port=7002
 dss.server.datapath=${DATA_HOME}/data/dss
 #dss client config
-dss.client.url=standalone://127.0.0.1:7001/default
-
-#integration config
-wiki.address=127.0.0.1:8002
+dss.client.url=standalone://127.0.0.1:7002/default
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
+#rpc
+homes.address=http://192.168.10.29:8080
 
 #datafly config
 datafly.scan.package=com.doublekit.user,com.doublekit.privilege,com.doublekit.toolkit
