--- a/doublekit-oms-starter/src/main/resources/application-test.properties
+++ b/doublekit-oms-starter/src/main/resources/application-test.properties
@@ -29,7 +29,7 @@ dss.client.url=standalone://127.0.0.1:7001/doublekit-oms
 plugin.path=${APP_HOME}/plugin
 
 #licences config
-licences.path=${DATA_HOME}/data/dfs/default
+licences.path=${DATA_HOME}/data/dss/default
 
 db.path=101.132.162.74:3306
 
