--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -26,6 +26,8 @@ dss.client.url=standalone://127.0.0.1:7002/default
 #plugin config
 plugin.path=${APP_HOME}/plugin
 
+#rpc
+homes.address=http://192.168.10.5:8080
 
 #licences config
 licences.path=${DATA_HOME}/data/dfs/default
