--- a/doublekit-oms-starter/src/main/resources/application-test.properties
+++ b/doublekit-oms-starter/src/main/resources/application-test.properties
@@ -30,6 +30,9 @@ plugin.path=${APP_HOME}/plugin
 #licences config
 licences.path=${DATA_HOME}/data/dss/default
 
+#rpc
+homes.address=http://172.11.1.11:8080
+
 db.path=101.132.162.74:3306
 
 app.path=${APP_HOME}
