--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -95,15 +95,15 @@
             <artifactId>doublekit-sns-server</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-statistics-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!--ocs依赖-->
         <dependency>
             <groupId>com.doublekit</groupId>
             <artifactId>doublekit-subscribe-server</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ssm-server</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <!--其他引入-->
