--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -106,6 +106,11 @@
             <artifactId>doublekit-subscribe-server</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-statistics-server</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
         <!--其他引入-->
         <dependency>
             <groupId>com.doublekit</groupId>
