--- a/doublekit-oms-starter/src/main/resources/application-test.properties
+++ b/doublekit-oms-starter/src/main/resources/application-test.properties
@@ -17,11 +17,12 @@ DATA_HOME=/root/doublekit/${app.name}
 
 #dss config
 #dss server config
-dss.server.mode=standalone
-dss.server.port=7001
+dss.server.mode=server
+dss.server.port=5001
 dss.server.datapath=${DATA_HOME}/data/dss
 #dss client config
-dss.client.url=standalone://127.0.0.1:7001/doublekit-oms
+dss.client.url=127.0.0.1:5001
+dss.client.bucket=${app.name}
 
 #rpc config
 
