--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -104,12 +104,17 @@
         <dependency>
             <groupId>com.doublekit</groupId>
             <artifactId>doublekit-subscribe-server</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
             <artifactId>doublekit-statistics-server</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-download-server</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <!--其他引入-->
         <dependency>
