--- a/doublekit-oms-starter/src/main/resources/application-test.properties
+++ b/doublekit-oms-starter/src/main/resources/application-test.properties
@@ -37,3 +37,8 @@ homes.address=http://172.11.1.11:8080
 db.path=101.132.162.74:3306
 
 app.path=${APP_HOME}
+
+#??????????????
+template.shell.path=${APP_HOME}/script/create_db_local_02.sh
+#bd?????????
+db.shell.path=${APP_HOME}/script/create_db_local_02.sh
