支付环境修改

--- a/doublekit-oms-starter/src/main/resources/application-test.properties
+++ b/doublekit-oms-starter/src/main/resources/application-test.properties
@@ -42,3 +42,5 @@ app.path=${APP_HOME}
 template.shell.path=${APP_HOME}/script/create_db_local_02.sh
 
 db.shell.path=${APP_HOME}/script/create_db_local_02.sh
+
+return.path=""
