--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -42,4 +42,6 @@ template.shell.path=${APP_HOME}/script/create_db_local_02.sh
 
 db.shell.path=${APP_HOME}/script/create_db_local_02.sh
 
-return.path=""
+home.return.path=""
+
+portal.return.path=""
