--- a/doublekit-oms-starter/src/main/resources/application-prd.properties
+++ b/doublekit-oms-starter/src/main/resources/application-prd.properties
@@ -39,4 +39,6 @@ template.shell.path=${APP_HOME}/script/create_db_local_03.sh
 
 db.shell.path=${APP_HOME}/script/create_db_local_02.sh
 
-return.path=""
+home.return.path=""
+
+portal.return.path=""
