--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>doublekit-download-server</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-ssm-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!--其他引入-->
         <dependency>
             <groupId>com.doublekit</groupId>
