--- a/doublekit-oms-starter/src/main/resources/application-prd.properties
+++ b/doublekit-oms-starter/src/main/resources/application-prd.properties
@@ -3,7 +3,7 @@ app.name=doublekit-oms
 spring.profiles.active=test
 
 #web config
-server.port=8081
+server.port=8082
 
 #dal config
 
@@ -18,14 +18,16 @@ DATA_HOME=/root/doublekit/${app.name}
 #dss config
 #dss server config
 dss.server.mode=server
-dss.server.port=5001
+dss.server.port=5002
 dss.server.datapath=${DATA_HOME}/data/dss
 #dss client config
-dss.client.url=127.0.0.1:5001
+dss.client.url=127.0.0.1:5002
 dss.client.bucket=${app.name}
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
+#rpc
+ocs.service.address=http://192.168.10.5:8080
 
 #licences config
 licences.path=${DATA_HOME}/data/dfs/default
@@ -42,3 +44,6 @@ db.shell.path=${APP_HOME}/script/create_db_local_02.sh
 home.return.path=""
 
 portal.return.path=""
+
+
+homes.address=http://172.11.1.11:8080
