--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -23,11 +23,7 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
         <!--doublekit-->
-        <dependency>
-            <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-rpc-spring-boot-starter</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+
         <!--fcc基础组件依赖-->
         <dependency>
             <groupId>com.doublekit</groupId>
@@ -52,37 +48,27 @@
         <!--ssc共享服务接口依赖-->
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-member-server</artifactId>
+            <artifactId>doublekit-member-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-tenant-server</artifactId>
+            <artifactId>doublekit-tenant-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-iam-server</artifactId>
+            <artifactId>doublekit-product-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-tenant-server</artifactId>
+            <artifactId>doublekit-subscribe-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-product-server</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-subscribe-server</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-doc-server</artifactId>
+            <artifactId>doublekit-doc-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -92,33 +78,24 @@
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-sns-server</artifactId>
+            <artifactId>doublekit-sns-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-statistics-server</artifactId>
+            <artifactId>doublekit-statistics-api</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-download-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <!--ocs依赖-->
+
         <dependency>
             <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-subscribe-server</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-statistics-server</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-download-server</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-ssm-server</artifactId>
+            <artifactId>doublekit-ssm-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--其他引入-->
