--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ app.name=doublekit-oms
 spring.profiles.active=dev
 
 #web config
-server.port=8081
+server.port=8082
 
 #dal config
 
@@ -18,17 +18,20 @@ DATA_HOME=${user.home}/doublekit/${app.name}
 #dss config
 #dss server config
 dss.server.mode=server
-dss.server.port=5002
+dss.server.port=5003
 dss.server.datapath=${DATA_HOME}/data/dss
 #dss client config
-dss.client.url=127.0.0.1:5002
+dss.client.url=127.0.0.1:5003
 dss.client.bucket=${app.name}
 
 #plugin config
 plugin.path=${APP_HOME}/plugin
 
 #rpc
-homes.address=http://192.168.10.5:8080
+ocs.service.address=http://192.168.10.5:8080
+
+
+homes.address=http://172.11.1.11:8080
 
 #licences config
 licences.path=${DATA_HOME}/data/dfs/default
