--- a/doublekit-oms-starter/src/main/resources/application-test.properties
+++ b/doublekit-oms-starter/src/main/resources/application-test.properties
@@ -18,14 +18,14 @@ DATA_HOME=/root/doublekit/${app.name}
 #dss config
 #dss server config
 dss.server.mode=server
-dss.server.port=5001
+dss.server.port=5002
 dss.server.datapath=${DATA_HOME}/data/dss
 #dss client config
-dss.client.url=127.0.0.1:5001
+dss.client.url=127.0.0.1:5002
 dss.client.bucket=${app.name}
 
 #rpc config
-
+ocs.service.address=http://192.168.10.5:8080
 #plugin config
 plugin.path=${APP_HOME}/plugin
 #licences config
