环境  和静态文件修改

--- a/doublekit-oms-starter/src/main/resources/application-test.properties
+++ b/doublekit-oms-starter/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 #application config
 app.name=doublekit-oms
-spring.profiles.active=test
+spring.profiles.active=dev
 
 #web config
 server.port=8082
@@ -9,32 +9,34 @@ server.port=8082
 
 #dal config for mysql jdbc
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://172.11.1.10:3306/darth_boss?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+jdbc.url=jdbc:mysql://172.11.1.10:3306/darth_oms?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 jdbc.username=root
 jdbc.password=darth2020
 
-DATA_HOME=/root/doublekit/${app.name}
+DATA_HOME=${user.home}/doublekit/${app.name}
 
 #dss config
 #dss server config
 dss.server.mode=server
-dss.server.port=5002
+dss.server.port=5003
 dss.server.datapath=${DATA_HOME}/data/dss
 #dss client config
-dss.client.url=127.0.0.1:5002
+dss.client.url=127.0.0.1:5003
 dss.client.bucket=${app.name}
 
-#rpc config
-ocs.service.address=http://172.11.1.11:8080
 #plugin config
 plugin.path=${APP_HOME}/plugin
-#licences config
-licences.path=${DATA_HOME}/data/dss/default
 
 #rpc
+ocs.service.address=http://172.11.1.11:8080
+
+
 homes.address=http://172.11.1.11:8080
 
-db.path=101.132.162.74:3306
+#licences config
+licences.path=${DATA_HOME}/data/dfs/default
+
+db.path=127.0.0.1:3306
 
 app.path=${APP_HOME}
 
@@ -46,3 +48,4 @@ db.shell.path=${APP_HOME}/script/create_db_local_02.sh
 home.return.path=""
 
 portal.return.path=""
+
