配置文件修改

--- a/doublekit-oms-starter/src/main/resources/application-prd.properties
+++ b/doublekit-oms-starter/src/main/resources/application-prd.properties
@@ -15,13 +15,27 @@ jdbc.password=darth2020
 
 DATA_HOME=/root/doublekit/${app.name}
 
+#dfs config
+#dfs.server.enabled=false
+dfs.server.mode=server
+dfs.server.port=4002
+dfs.server.datapath=${DATA_HOME}/files
+dfs.client.url=127.0.0.1:4002
+dfs.client.bucket=${app.name}
+
+#dcs server config
+dcs.server.mode=server
+dcs.server.port=5002
+dcs.server.datapath=${DATA_HOME}/caches
+dcs.client.url=127.0.0.1:5002
+dcs.client.bucket=${app.name}
+
 #dss config
-#dss server config
+#dss.server.enabled=false
 dss.server.mode=server
-dss.server.port=5002
-dss.server.datapath=${DATA_HOME}/data/dss
-#dss client config
-dss.client.url=127.0.0.1:5002
+dss.server.port=6002
+dss.server.datapath=${DATA_HOME}/index
+dss.client.url=127.0.0.1:6002
 dss.client.bucket=${app.name}
 
 #plugin config
