--- a/tiklab-oms-starter/src/main/resources/application-prd.yaml
+++ b/tiklab-oms-starter/src/main/resources/application-prd.yaml
@@ -54,11 +54,8 @@ mysql:
 
 #eas config
 eas:
-  address: http://101.132.102.247:8081
-  web:
-    address: http://101.132.102.247:8081
   embbed:
-    enable: false
+    enable: true
 
 
 
