--- a/tiklab-oms-starter/src/main/resources/application-test.yaml
+++ b/tiklab-oms-starter/src/main/resources/application-test.yaml
@@ -32,12 +32,16 @@ mysql:
   name: tiklab_oms
 
 #eas config
-eas:
-  address: http://172.11.1.12:8080
-  web:
-    address: http://172.11.1.12:8080
-  embbed:
-    enable: false
+#eas:
+ # address: http://172.11.1.12:8080
+  #web:
+  #  address: http://172.11.1.12:8080
+ # embbed:
+  #  enable: false
+
+  eas:
+    embbed:
+      enable: true
 
 #dfs config
 #dfs.server.enabled=false
