--- a/tiklab-xpack-starter/src/main/resources/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/application.yaml
@@ -2,10 +2,12 @@
 app:
   name: tiklab-xpack
   path: ${APP_HOME}
+
 spring:
   profiles:
     active: prd
-
+  config:
+    import: optional:classpath:/config/${env:dev}/application.yaml
 #web config
 server:
   port: 8083
@@ -49,8 +51,7 @@ mysql:
     enable: false
   server:
     port: 3306
-  version: mysql-8.0.28
-  name: tiklab_oms
+  database: tiklab_xcode
 
 #eas config
 eas:
