--- a/tiklab-xpack-starter/src/main/resources/config/dev/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/dev/application.yaml
@@ -8,14 +8,14 @@ spring:
 
 #web config
 server:
-  port: 8083
+  port: 8088
 
 #dal config
 
 #dal config for mysql jdbc
 jdbc:
   driverClassName: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://172.10.1.10:3306/tiklab_xpack?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+  url:  jdbc:mysql://172.10.1.10:3306/tiklab_xpack?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
   username: root
   password: darth2020
 
@@ -27,7 +27,7 @@ mysql:
     enable: false
   server:
     port: 3306
- database: tiklab_xcode
+
 
 #eas config
 eas:
@@ -75,19 +75,7 @@ homes:
 licences:
   path: ${DATA_HOME}/data/dfs/default
 
-db:
-  path: 127.0.0.1:3306
-  shell:
-    path: ${APP_HOME}/script/create_db_local_02.sh
-
-
-template:
-  shell:
-    path: ${APP_HOME}/script/create_db_local_02.sh
-
-portal:
-  return:
-    path: ""
 
 repository:
   library: /Users/limingliang/Documents
+  test: ${user.home}
