--- a/tiklab-xpack-starter/src/main/resources/config/test/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/test/application.yaml
@@ -94,4 +94,4 @@ template:
     path: ${APP_HOME}/script/create_db_local_02.sh
 
 repository:
-  library: ${user.home}/repository
+  library: ${user.home}
