--- a/tiklab-xpack-api/pom.xml
+++ b/tiklab-xpack-api/pom.xml
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId> net.tiklab</groupId>
-            <artifactId>tiklab-user-api</artifactId>
+            <artifactId>tiklab-user-system-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
